--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 	
 	<footer class="fixed-bottom">
-		<img src="logo.svg" class="img" alt="Logo" width="450" height="450">
+		<img src="Logo.svg" class="img" alt="Logo" width="450" height="450">
 		<p>&copy; Copyright school year 2020-2021 | PTC Web Dev | 
 		<a href="mailto:ptc19.rodriguezs@myptc.edu"> e-mail Sonny R</a></p>
 	</footer>
