added my word cert

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
 <div class="row">
     <div class="column">
       <div class="content">
-        <img src="mta-introduction-to-programming-using-html-and-css-certified-2021.png" alt="HTML and CSS Microsoft Certificate." style="width: 60%">
-        <h3>My MTA Introduction to programming using HTML and CSS Certificate.</h3>
+        <img src="mta-introduction-to-programming-using-html-and-css-certified-2021.png" alt="HTML and CSS Microsoft Associate Certificate." style="width: 60%">
+        <h3>My MTA Introduction to programming using HTML and CSS Associate Certificate.</h3>
       </div>
     </div>
     <div class="column">
@@ -43,8 +43,8 @@
     </div>
     <div class="column">
       <div class="content">
-        <img src="CertificateOfCompletionLearningGitHub1.png" alt="LinkedIn Learning GitHub Training." style="width: 70%">
-        <h3>My LinkedIn Learning GitHub Certificate.</h3>
+        <img src="mta-introduction-to-programming-using-html-and-css-certified-2021.png" alt="Microsoft Word certificate." style="width: 70%">
+        <h3>My Microsoft Word 2019 Associate Certificate.</h3>
       </div>
     </div>
   </div>
